[tool.poetry]
name = "imp_framework"
version = "0.1.0"
description = "wireless implementation framework"
authors = ["jchcdwgithub <jason.hoang@cdw.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
